tests/lean/protectedAlias.lean.expected.out
Ex.double : Nat → Nat
protectedAlias.lean:9:7-9:13: error: unknown identifier 'double'
